Update StudentAPIController and UserAPIController
