# app/Http/Controllers/API/StudentAPIController.php
@@ -2,15 +2,24 @@
 
 namespace App\Http\Controllers\API;
 
+use App\Http\Controllers\API\Sama\SamaRequestController;
 use App\Http\Requests\API\CreateStudentAPIRequest;
 use App\Http\Requests\API\UpdateStudentAPIRequest;
+use App\Models\Gender;
 use App\Models\Student;
+use App\Models\StudyArea;
+use App\Models\StudyLevel;
+use App\Models\StudyStatus;
+use App\Models\Term;
 use App\Repositories\StudentRepository;
 use App\Repositories\UserRepository;
 use App\User;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
+use Illuminate\Support\Facades\Auth;
 use InfyOm\Generator\Criteria\LimitOffsetCriteria;
+use Morilog\Jalali\Jalalian;
 use Prettus\Repository\Criteria\RequestCriteria;
 use Response;
 
@@ -293,20 +302,220 @@ class StudentAPIController extends AppBaseController
      */
 
 
+
     /**
      * @param Request $request
-     * @return Response
+     * @return \Illuminate\Http\Response
      *
-     * @SWG\Get(
-     *      path="/students/byScuId/{scu_id}",
-     *      summary="Display the specified User by scu_id",
-     *      tags={"User"},
-     *      description="Get User by scu_id",
+     * @SWG\Put(
+     *      path="/students/verify",
+     *      summary="Verify User (as student)",
+     *      tags={"Student"},
+     *      description="Verify University information (as student) of authenticated User",
      *      produces={"application/json"},
      *      @SWG\Parameter(
      *          name="scu_id",
-     *          description="scu_id of User",
-     *          type="string",
+     *          description="scu_id field of users table",
+     *          type="integer",
+     *          required=true,
+     *          in="path",
+     *      ),
+     *      @SWG\Parameter(
+     *          name="national_id",
+     *          description="national_id field of users table",
+     *          type="integer",
+     *          required=true,
+     *          in="path",
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Student"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function verify(Request $request)
+    {
+        $request->validate([
+            'scu_id' => 'required|regex:/[0-9]{6,7}/|max:7',
+            'national_id' => 'required|regex:/[0-9]{10}/|max:10',
+        ]);
+
+        /** @var User $user */
+        $user = $this->userRepository->findWithoutFail(auth('api')->user()->id);
+
+        if (empty($user)) {
+            return $this->sendError('ابتدا وارد سامانه شوید');
+        }
+
+        $input = $request->all();
+
+        $student = Student::withTrashed()->find($user->id);
+
+        if (isset($student) && $student->trashed()) { // user verified, but has soft deleted before
+            $student->restore();
+            $user->assignRole('verified');
+            $user->is_verified = true;
+
+            $user['student'] = $user->student;
+
+            return response()->json([
+                'status' => 'اطلاعات دانشگاهی کاربر با موفقیت بازیابی شد.',
+                'result' => $user,
+            ]);
+        }
+        elseif (isset($student)) { // verified user
+            return response()->json([
+                'status' => 'کاربر اطلاعات دانشگاهی خود را قبلا احراز کرده است.'
+            ], 400);
+        }
+        elseif (empty($student)) { // user not verified
+            try {
+                $student_fetch = SamaRequestController::sama_request('StudentService', 'GetStudentPersonInfo', ['studentNumber' => $input['scu_id']]);
+                if ($student_fetch->StudentNumber == $input['scu_id']) { // Student with entered Scu Id is exist
+
+                    if ($student_fetch->Person->NationalCode == $input['national_id']) { // matched entered national id with the Scu Id
+
+                        $birthday_array = explode('/', $student_fetch->Person->BirthDate);
+                        $jalalian_begin = new Jalalian($birthday_array[0], $birthday_array[1], $birthday_array[2]); // extract Solar date from String
+                        $user_information = array(
+                            'first_name' => $student_fetch->Person->FirstName,
+                            'last_name' => $student_fetch->Person->LastName,
+                            'birthday' => ($jalalian_begin)->toCarbon(),  // convert Solar date to A.D.
+                            'scu_id' => $student_fetch->StudentNumber,
+                            'national_id' => $student_fetch->Person->NationalCode,
+                            'gender_unique_code' => strtolower(array_last(explode("\\", Gender::class))) . $student_fetch->Person->Gender->GenderId,
+                            'updated_at' => Carbon::now(), // set update time
+                            'is_verified' => true,
+                        );
+                        if(empty($user->username)){
+                            $user_information['username'] = str_random(8) . $student_fetch->StudentNumber;
+                        }
+                        $user = $this->userRepository->update($user_information, $user->id);
+
+                        $user->assignRole('verified');
+
+                        /**
+                         * static part of unique_code      CONCAT      numeric part of unique_code retrieve from SAMA
+                         * example:            studyarea [CONCAT] 500 : studyarea500
+                         * example:            term [CONCAT] 128 : term128
+                         * example:            studylevel [CONCAT] 2 : studylevel2
+                         * example:            studystatus [CONCAT] 2 : studystatus2
+                         */
+                        $student_information = array(
+                            'study_area_unique_code' => strtolower(array_last(explode("\\", StudyArea::class))) . $student_fetch->CourseStudy->CourseStudyCode,
+                            'entrance_term_unique_code' => Term::where('term_code', $student_fetch->EntranceTerm->TermCode)->first()->unique_code, // sama retrieve TermCode which isn't Unique (multiple null)!
+                            'study_level_unique_code' => strtolower(array_last(explode("\\", StudyLevel::class))) . $student_fetch->StudyLevel->StudyLevelId,
+                            'study_status_unique_code' => strtolower(array_last(explode("\\", StudyStatus::class))) . $student_fetch->StudentStatus->StudentStatusId,
+
+                            'is_active' => $student_fetch->IsActive,
+                            'is_guest' => $student_fetch->IsGuest,
+                            'is_iranian' => $student_fetch->Person->IsIranian,
+                            'total_average' => $student_fetch->TotalAverage,
+                            'user_id' => $user->id,
+                        );
+                        $student = $this->studentRepository->create($student_information);
+                        $user['student'] = $student;
+                        return response()->json($user);
+
+                    } else {
+                        return $this->sendError('شماره ملی یا شماره دانشجویی صحیح نیست.');
+                    }
+                } else {
+                    return $this->sendError('شماره ملی یا شماره دانشجویی صحیح نیست.');
+                }
+            } catch (\Exception $e) {
+                /** ATTENTION!
+                 * uncomment this just for debug because this line below may pass critical information of Server Logic.
+                 */
+//                return response()->json($e->getMessage());
+                return response()->json([
+                    'status' => 'An internal error has occurred. Please contact your administrator.',
+                    'e' => $e
+                ], 500);
+            }
+        }
+    }
+
+    /**
+     * @return Response
+     *
+     * @SWG\put(
+     *      path="/students/unVerify",
+     *      summary="Soft Delete Student",
+     *      tags={"Student"},
+     *      description="Soft Delete Student information of authenticated user",
+     *      produces={"application/json"},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function unVerify()
+    {
+        /** @var User $user */
+        $user = $this->userRepository->findWithoutFail(auth('api')->user()->id);
+
+        if (empty($user)) {
+            return $this->sendError('ابتدا وارد سامانه شوید');
+        }
+
+        if (empty($user->student)){
+            return $this->sendError('کاربر اطلاعات دانشگاهی خود را احراز نکرده است.');
+        }
+
+        /** @var Student $student */
+        $student = $this->studentRepository->findWithoutFail($user->student->id);
+
+        $student->delete();
+        $user->removeRole('verified');
+        $user->is_verified = false;
+
+        return response()->json([
+            'status' => 'اطلاعات دانشگاهی کاربر با موفقیت حذف شد.'
+        ]);
+    }
+
+
+    /**
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/students/byScuId",
+     *      summary="Display the specified Student",
+     *      tags={"Student"},
+     *      description="Display the specified Student by scu_id",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="scu_id",
+     *          description="scu_id of Student",
+     *          type="integer",
      *          required=true,
      *          in="path"
      *      ),
@@ -321,7 +530,7 @@ class StudentAPIController extends AppBaseController
      *              ),
      *              @SWG\Property(
      *                  property="data",
-     *                  ref="App/User"
+     *                  ref="#/definitions/Student"
      *              ),
      *              @SWG\Property(
      *                  property="message",
@@ -331,26 +540,117 @@ class StudentAPIController extends AppBaseController
      *      )
      * )
      */
-    public function showByScuId(Request $request)
+    public function byScuId(Request $request)
     {
         /** @var User $user */
         $user = User::where('scu_id', $request['scu_id'])->first();
 
         if (empty($user)) {
-            return $this->sendError('User not found');
+            return $this->sendError('کاربری با این شماره دانشگاهی وجود ندارد');
         }
 
-        $student = Student::where('user_id', $user->id)->first();
-
-        if (empty($student)) {
-            return $this->sendError('Student not found');
+        if (empty($user->student)){
+            return $this->sendError('کاربر اطلاعات دانشگاهی خود را احراز نکرده است.');
         }
+
+        /** @var Student $student */
+        $student = $this->studentRepository->findWithoutFail($user->student->id);
 
         $this->authorize('show', $user);
 
-        $user->student = $student;
+        $student['user'] = collect($user->toArray())
+            ->only([
+                'first_name',
+                'last_name',
+                'email',
+                'phone_number',
+                'birthday',
+                'username',
+                'gender_unique_code',
+                'scu_id',
+                'national_id',
+                'last_login',
+                'avatar_path',
+                'is_verified',
+                'updated_at',
+            ])
+            ->all();
 
-        return $this->sendResponse($user->toArray(), 'User retrieved successfully');
+        return response()->json([
+            'status' => 'درخواست موفقیت آمیز بود.',
+            'student' => $student,
+        ]);
+    }
+
+
+    /**
+     * @return Response
+     *
+     * @SWG\Get(
+     *      path="/students/studentInfo",
+     *      summary="Retrieve Student",
+     *      tags={"Student"},
+     *      description="Retrieve Student information of authenticated user",
+     *      produces={"application/json"},
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Student"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function studentInfo(Request $request)
+    {
+        /** @var User $user */
+        $user = $this->userRepository->findWithoutFail(auth('api')->user()->id);
+
+        if (empty($user)) {
+            return $this->sendError('ابتدا وارد سامانه شوید');
+        }
+
+        if (empty($user->student)){
+            return $this->sendError('کاربر اطلاعات دانشگاهی خود را احراز نکرده است.');
+        }
+
+        /** @var Student $student */
+        $student = $this->studentRepository->findWithoutFail($user->student->id);
+
+        $student['user'] = collect($user->toArray())
+            ->only([
+                'first_name',
+                'last_name',
+                'email',
+                'phone_number',
+                'birthday',
+                'username',
+                'gender_unique_code',
+                'scu_id',
+                'national_id',
+                'last_login',
+                'avatar_path',
+                'is_verified',
+                'updated_at',
+            ])
+            ->all();
+
+        return response()->json([
+            'status' => 'درخواست موفقیت آمیز بود.',
+            'student' => $student,
+        ]);
     }
 
 
@@ -360,9 +660,9 @@ class StudentAPIController extends AppBaseController
      *
      * @SWG\Put(
      *      path="/students/updateProfile",
-     *      summary="Update Profile Information",
+     *      summary="Update Profile information",
      *      tags={"Student"},
-     *      description="Update Profile Information",
+     *      description="Update Profile information of authenticated user",
      *      produces={"application/json"},
      *      @SWG\Parameter(
      *          name="first_name",
@@ -403,7 +703,7 @@ class StudentAPIController extends AppBaseController
      *              ),
      *              @SWG\Property(
      *                  property="data",
-     *                  ref="App/User"
+     *                  ref="#/definitions/Student"
      *              ),
      *              @SWG\Property(
      *                  property="message",
